--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="DocuFirma" />
   <meta property="og:description" content="React demo for digital document signing built with shadcn components." />
   <meta property="og:image" content="/logo.png" />
-  <meta property="og:url" content="https://your-domain.com" />
+  <meta property="og:url" content="https://fsystemweb.github.io/docu-firma/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
